syntax = "proto3";

package auth;

import "common/base_response.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/xryar/golang-grpc-ecommerce/pb/auth";

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
    rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse);
}

message RegisterRequest {
    string fullname = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
    string email = 2 [(buf.validate.field).string = { email: true, min_len: 1, max_len: 255 }];
    string password = 3 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
    string password_confirmation = 4 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message RegisterResponse {
    common.BaseResponse base = 1;
}

message LoginRequest {
    string email = 1 [(buf.validate.field).string = { email: true, min_len: 1, max_len: 255 }];
    string password = 2 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message LoginResponse {
    common.BaseResponse base = 1;
    string access_token = 2;
}

message LogoutRequest {}

message LogoutResponse {
    common.BaseResponse base = 1;
}

message ChangePasswordRequest {
    string old_password = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
    string new_password = 2 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
    string new_password_confirmation = 3 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message ChangePasswordResponse {
    common.BaseResponse base = 1;
}